STL pictures added to introduction

--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -379,7 +379,6 @@ information of geological features and textures in the process.
 \label{fig:upsat}
 \end{figure}
 
-
 \subsection{Uncertainty}
 
 Sources of uncertainty can exist in every part of $\mbox{CO}_2$ storage modeling
@@ -1798,6 +1797,42 @@ together.}
   \label{fig:codes}
 %
 \end{figure}
+
+\begin{figure}
+  \centering
+  \includegraphics[width=0.65 \linewidth]{./figurer/codes} 
+  %
+  \caption{Marker codes used to plot the simulation results of all cases
+together.}
+  \label{fig:STL_1}
+%
+\end{figure}
+
+\begin{figure}
+\begin{tabular}{cc}
+\includegraphics[width=0.5\textwidth]{./figurer/C02331_FS_UG_TY.eps}&
+\includegraphics[width=0.5\textwidth]{./figurer/C02332_FS_UG_TY.eps}
+\\(a)&(b)\\
+\includegraphics[width=0.5\textwidth]{./figurer/C02331_FS_UG_TZNZ.eps}&
+\includegraphics[width=0.5\textwidth]{./figurer/C02332_FS_UG_TZNZ.eps}
+\\(c)&(d)\\
+\includegraphics[width=0.5\textwidth]{./figurer/C02331_FS_UG_TZz.eps}&
+\includegraphics[width=0.5\textwidth]{./figurer/C02332_FS_UG_TZz.eps}
+\\(e)&(f)\\
+\includegraphics[width=0.5\textwidth]{./figurer/C02331_FS_UG_STL.eps}&
+\includegraphics[width=0.5\textwidth]{./figurer/C02332_FS_UG_STL.eps}
+\\(g)&(h)
+\end{tabular}
+\end{figure}
+
+% \begin{figure}
+% \begin{tabular}{c}
+% \includegraphics[width=1\textwidth,natwidth=1848bp, natheight=837bp]{./figurer/C02332_FS_UG_TY.eps}\\(a)\\
+% \includegraphics[width=1\textwidth,natwidth=1848bp, natheight=837bp]{./figurer/C02332_FS_UG_TZNZ.eps}\\(b)\\
+% \includegraphics[width=1\textwidth,natwidth=1848bp, natheight=837bp]{./figurer/C02332_FS_UG_TZz.eps}\\(c)\\
+% \includegraphics[width=0.7\textwidth,natwidth=1848bp, natheight=837bp]{./figurer/C02332_FS_UG_STL.jpg}\\(d)
+% \end{tabular}
+% \end{figure}
 
 \section{Sensitivity and risk analysis}
 \label{sec:StochasticAnalysis}
