--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -82,6 +82,7 @@
 
 %ADDED BY MEISAM: use extra packages
 \usepackage{morefloats}
+% \usepackage{graphicx}
 %
 % Set fancy page header using fancyhdr package
 % 
