--- a/latex/thesis.bib
+++ b/latex/thesis.bib
@@ -1531,3 +1531,23 @@
   publisher = {Elsevier}
 }
 
+@ARTICLE{law1966hydrological,
+  title={Hydrological and Numerical Analysis of CO$_2$ disposal in deep aquifer systems in the Alberta sedimentary basin},
+  author={Law, HS and Bachu, S},
+  journal={Ener. Convers. Mgmt},
+  volume={37},
+  number={6-8},
+  pages={1167--1174},
+  year={1966}
+}
+
+@ARTICLE{van1995co,
+  title={The CO$_2$ storage efficiency of aquifers},
+  author={Van der Meer, LGH},
+  journal={Energy Conversion and Management},
+  volume={36},
+  number={6},
+  pages={513--518},
+  year={1995},
+  publisher={Elsevier}
+}
