--- a/latex/thesis.tex
+++ b/latex/thesis.tex
@@ -82,6 +82,8 @@
 
 %ADDED BY MEISAM: use extra packages
 \usepackage{morefloats}
+\newcommand{\coo}{CO$_2$}
+
 % \usepackage{graphicx}
 %
 % Set fancy page header using fancyhdr package
